[project]
name = "lightningtools"
version = "1.0"
description = ""
authors = [
    {name = "flyingmilktea", email = "dev@flyingmilktea.com"},
]
dependencies = [
    "setuptools",
    "argparse",
    "hydra-core",
    "hyperpyyaml",
    "loguru",
    "munch",
    "nonechucks@git+https://github.com/flyingmilktea/nonechucks.git@main",
    "numpy",
    "rich",
    "toolz",
    "wandb",
    "icecream",
    "tqdm",
    "flake8",
    "black",
    "pylint",
    "lightning-fabric>=2.1.3",
    "lightning>=2.1.3",
    "yq",
    "autoflake>=2.2.1",
    "matplotlib>=3.8.2",
    "scipy>=1.11.4",
    "ray[data]>=2.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.scripts]
lightning_plotter = "lightningtools.plotter:main"
lightning_trainer = "lightningtools.trainer:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.scripts]
start.env_file=".env"
pdm-autoflake.shell = "git ls-files '*.py' | xargs -t pdm run autoflake --in-place --expand-star-imports --remove-all-unused-imports --ignore-init-module-imports"
pdm-isort.shell = "git ls-files '*.py' | xargs -t pdm run isort -q"
pdm-black.shell = "git ls-files '*.py' | xargs -t pdm run black -q"
lint-format-python.composite = ["pdm-autoflake", "pdm-isort", "pdm-black"]
lint-format-gitignore.shell = "git ls-files '.gitignore' | xargs -tI {} sort -o {} {}"
lint-format-yaml.shell = "git ls-files '*.yml' '*.yaml' | xargs -t yq -i -S -Y -w 10000 ."
lint-format.env = {LC_ALL="C"}
lint-format.composite = ["lint-format-python", "lint-format-gitignore", "lint-format-yaml"]
pdm-flake8.shell = "git ls-files '*.py' | xargs -t pdm run flake8"
pdm-pylint.shell = "git ls-files '*.py' | xargs -t pdm run pylint"
lint.composite = ["pdm-flake8", "pdm-pylint"]
pre_install.shell = "export CMAKE_ARGS='-DLLAMA_CUBLAS=on' FORCE_CMAKE=1"
